# GENIA

./: .gitignore  LEGAL.md  Pruebas1.csv  README.md  macros.vb  programaa.py  requirements.txt
biases/: Cargo.toml
biases/src/: lib.rs
data/test_data/: hypergraph_test.hg  preprocessed_test.parquet  preprocessing_test.csv  synthetic_chars.parquet
gower/: Cargo.toml
gower/src/: lib.rs
libs/: Cargo.toml
libs/biases/: Cargo.toml
libs/biases/src/: lib.rs
libs/genetics/: Cargo.toml
libs/genetics/src/: group.rs  lib.rs  student_data.rs
libs/gower/: Cargo.toml
libs/gower/src/: lib.rs  student_data.rs
libs/group_enhancer/: Cargo.toml
libs/group_enhancer/src/: lib.rs
libs/hypergraph/: Cargo.toml
libs/hypergraph/src/: bitmap.rs  lib.rs
libs/kruscal/: Cargo.toml
libs/kruscal/src/: lib.rs
libs/ordered_f64/: Cargo.toml
libs/ordered_f64/src/: lib.rs
libs/src/: lib.rs
libs/src/data/: hypergraph.rs
libs/src/ml/: genetics.rs  group.rs  mod.rs  student_data.rs
libs/src/utils/: bitmap.rs  logging.rs  math.rs  mod.rs
libs/symmetric_matrix/src/: lib.rs
src_py/: ExcelConPolars.py  consts.py  genetics.py  grading.py  graficas.py  hypergraph.py  macros.vba.txt  main.py  train.py
src_py/core/: preprocess.py  setup.py
src_py/data/: characteristics.hg  characteristics.parquet  dataframe.py  hypergraph.py  synthetic_chars.hg  synthetic_chars.parquet
src_py/experiments/: experiment.py  genetic_algo.py  genetic_algo_real.py
src_py/models/: curriculm_vectors.parquet  curriculum_classifier.py
symmetric_matrix/: Cargo.toml
tests/: gower_test.py
(+20 files in other folders)
