[package]
name = "gower"
version = "0.1.0"
edition = "2024"

[lib]
name="gower_distance"
crate-type = ["cdylib"]

[dependencies]
num_cpus = "1.17.0"
numpy = "0.26.0"
polars = {version = "0.52.0", features = ["lazy", "rows", "timezones"]}
pyo3 = "0.26.0"
pyo3-polars = {version = "0.25.0", features = ["lazy", "dtype-full"]}
