[package]
name = "py_optimizer"
version = "0.1.0"
edition = "2024"

[dependencies]
pyo3 = "0.26.0"
pyo3-polars = "0.25.0"
polars = {version = "0.52.0", features = ["lazy", "timezones"]}
numpy = "0.26.0"
postcard = {version = "1.1.3", features = ["alloc"]}
serde = "1.0.228"
typetag = "0.2.21"
rand = "0.10.0"
